# RM-homework

HW1/: README.md
HW1/ex1/: README.md  ex1.sh
HW1/ex2/: CMakeLists.txt  HSVPerimeterTest.cpp  README.md  main.cpp
HW1/ex3/: CMakeLists.txt  LK_bullet_track.avi  README.md  main.cpp
HW1/ex3_2/: CMakeLists.txt  README.md  main.cpp
HW2/ex1/: CMakeLists.txt  main.cpp
HW2/ex2/: CMakeLists.txt  main.cpp
HW2/ex3/: CMakeLists.txt  main.cpp
